# libircppclient

./: .gitignore  .travis.yaml  .travis.yml  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  LICENSE.md  README.md  README.rst  ideas.md
debug/tests/: simple  ut
src/: CMakeLists.txt  commands.cpp  config.hpp  connection.cpp  connection.hpp  general.cpp  general.hpp  libircppclient.cpp  libircppclient.hpp  ssl_connection.hpp  util.cpp  util.hpp
test/: .gitignore  CMakeLists.txt  simple.cpp
tests/: CMakeLists.txt  connection_only.cpp  simple.cpp
util/: check_tabs.sh
util/travis/: compilers.sh  install_boost.sh  lib_boost.sh
